examples/k8s/service-mesh-demo/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: fullstack-api
spec:
  host: fullstack-api
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
